--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="highwaySubDistricts.js" type="text/javascript"></script>
 	<script src="TRoutes.js" type="text/javascript"></script>
 	<script src="TStops.js" type="text/javascript"></script>
-	<script src="busAllRoutes.js" type="text/javascript"></script>
+	<script src="busRoutes.js" type="text/javascript"></script>
 	<script src="busAllStops.js" type="text/javascript"></script>
 
 	<style>
@@ -59,10 +59,10 @@
 			map.addLayer(mapboxTiles);
 
 			L.geoJSON(highwaySubDistricts).addTo(map);
-			L.geoJSON(busAllRoutes).addTo(map);
+			L.geoJSON(busRoutes).addTo(map);
 			L.geoJSON(TRoutes).addTo(map);
 			L.geoJSON(TStops).addTo(map);
-			L.geoJSON(busAllStops).addTo(map);
+			L.geoJSON(busStops).addTo(map);
 
 		</script>
 
