--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 				maxZoom: 22,
 				});
 
-			var geojsonMarkerOptions = {
-				radius: 6,
+			var geojsonMarker = {
+				radius: 3,
 				fillColor: "blue",
-				color: "blue",
+				//color: "blue",
 				weight: 1,
 				opacity: 0.8,
 				fillOpacity: 0.8,
@@ -72,7 +72,7 @@
 			});
 
 			$.getJSON("data/busRoutes.geojson",function(data){
-				L.geoJson(data, {
+				L.geoJson(data, {color: "purple", weight: 2}{
 					onEachFeature: function(feature, layer){
 						layer.bindPopup(feature.properties.MBTA_ROUTE);
 					}
