--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			$.getJSON("data/busStops.geojson",function(data){	
 				L.geoJson(data, {
 					pointToLayer: function(feature,latlng){
-						return L.circleMarker(latlng, geojsonMarkerOptions);
+						return L.circleMarker(latlng, geojsonMarker);
 					}
 				}).addTo(map);
 			});
