--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 				L.geoJson(data,{color:"purple", weight:1, fillOpacity:0}).addTo(map);
 			});
 
+			//L.geoJSON(busStops, {color: "purple", weight: 1}).addTo(map);
+			//L.geoJSON(busRoutes, {color: "purple", weight: 1}).addTo(map);
+			//L.geoJSON(highwaySubDistricts).addTo(map);
+
 		</script>
 
 	</body>
