--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				maxZoom: 22,
 				});
 
-			var geojsonMarker = {
+			var geojsonMarkerOptions = {
 				radius: 3,
 				fillColor: "blue",
 				//color: "blue",
@@ -61,12 +61,18 @@
 				fillOpacity: 0.8,
 			};
 
+			var geojsonLine = {
+				weight:2,
+				color: "purple",
+				opacity:0.8,
+			}
+
 			map.addLayer(mapboxTiles);
 
 			$.getJSON("data/busStops.geojson",function(data){	
 				L.geoJson(data, {
 					pointToLayer: function(feature,latlng){
-						return L.circleMarker(latlng, geojsonMarker);
+						return L.circleMarker(latlng, geojsonMarkerOptions);
 					}
 				}).addTo(map);
 			});
@@ -81,6 +87,10 @@
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
 				L.geoJson(data,{color:"purple", weight:1, fillOpacity:0}).addTo(map);
 			});
+
+			//L.geoJSON(busStops, {color: "purple", weight: 1}).addTo(map);
+			//L.geoJSON(busRoutes, {color: "purple", weight: 1}).addTo(map);
+			//L.geoJSON(highwaySubDistricts).addTo(map);
 
 		</script>
 
