--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 				});
 
 			map.addLayer(mapboxTiles);
-			
+
 			var geojsonMarkerOptions = {
 				radius: 3,
-				fillColor: "blue",
+				fillColor: "purple",
 				//color: "blue",
 				weight: 1,
 				opacity: 0.8,
@@ -65,21 +65,21 @@
 
 			//var geojsonLine = {weight:2,color: "purple",opacity:0.8,}
 
+			$.getJSON("data/busRoutes.geojson",function(data){
+				L.geoJson(data, {
+					onEachFeature: function(feature,layer){
+						layer.bindPopup(feature.properties.MBTA_ROUTE)
+					//,{color: "purple", weight: 2}
+					;}
+				}).addTo(map);
+			});
+
 			$.getJSON("data/busStops.geojson",function(data){	
 				L.geoJson(data, {
 					pointToLayer: function(feature,latlng){
 						return L.circleMarker(latlng, geojsonMarkerOptions);
 					}
 				}).addTo(map);
-			});
-
-			$.getJSON("data/busRoutes.geojson",function(data){
-				L.geoJson(data, {
-					onEachFeature: function(feature,layer){
-						layer.bindPopup(feature.properties.MBTA_ROUTE)
-					//,{color: "purple", weight: 2}
-					;
-					}).addTo(map);
 			});
 
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
