--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				L.geoJson(data, {
 					onEachFeature: function(feature,layer){
 						layer.bindPopup(feature.properties.MBTA_ROUTE)
-					//,{color: "purple", weight: 2}
+					,{color: "purple", weight: 2}
 					;}
 				}).addTo(map);
 			});
