--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
 
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
+
 	<style>
 
 		#map {
@@ -40,34 +43,40 @@
 
 		<script>
 
-			var map=L.map('map',{
+			//var map=L.map('map',{
+			//	center:[42.35, -71.15229363080779],
+			//	zoom:11
+			//	});
+
+			mapbox.accessToken = 'pk.eyJ1IjoiY2xhaXJlLWNnIiwiYSI6ImNrbnA3bjZxdTAwOHQyb3FwdXhhbDM5d3cifQ.cX3_pLwyHaV0y3N6_X6yaw';
+
+			var map = new mapboxgl.Map({
+				container: 'map',
+				style:'mapbox://styles/claire-cg/cknrt5unw11gm17qurgkky7z8',
 				center:[42.35, -71.15229363080779],
-				zoom:11
-				});
-
-			L.mapbox.accessToken = 'pk.eyJ1IjoiY2xhaXJlLWNnIiwiYSI6ImNrbnA3bjZxdTAwOHQyb3FwdXhhbDM5d3cifQ.cX3_pLwyHaV0y3N6_X6yaw';
-
-			var mapboxTiles = L.tileLayer('mapbox://styles/claire-cg/cknrt5unw11gm17qurgkky7z8' + L.mapbox.accessToken, {
-		         attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-				maxZoom: 18,
+				zoom: 11,
+				maxZoom: 22,
+		        attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
 				});
 
 			map.addLayer(mapboxTiles);
 
 			var geojsonMarkerOptions = {
-				radius: 2,
+				radius: 3,
 				fillColor: "purple",
-				color: "purple",
+				//color: "blue",
 				weight: 1,
-				opacity: 0,
+				opacity: 0.8,
 				fillOpacity: 0.8,
 			};
+
+			//var geojsonLine = {weight:2,color: "purple",opacity:0.8,}
 
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
 					onEachFeature: function(feature,layer){
 						layer.bindPopup(feature.properties.MBTA_ROUTE),
-					{color: "purple", weight: 1, opacity: 0.8};
+					{color: "purple", weight: 2};
 					}
 				}).addTo(map);
 			});
@@ -81,7 +90,7 @@
 			});
 
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
-				L.geoJson(data,{color:"black", weight:1, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"purple", weight:1, fillOpacity:0}).addTo(map);
 			});
 
 		</script>
