--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				center:[42.35, -71.15229363080779],
 				zoom: 11,
 				maxZoom: 22,
-		        attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+		        attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 				});
 
 			map.addLayer(mapboxTiles);
