--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<!--<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' /> -->
 
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
 
 	<style>
 
@@ -39,7 +39,7 @@
 
 	<body>
 
-		<div id='map'></div>
+		<div id='map' style='width:100%; height:100%;'></div>
 
 		<script>
 
@@ -48,7 +48,7 @@
 			//	zoom:11
 			//	});
 
-			mapbox.accessToken = 'pk.eyJ1IjoiY2xhaXJlLWNnIiwiYSI6ImNrbnA3bjZxdTAwOHQyb3FwdXhhbDM5d3cifQ.cX3_pLwyHaV0y3N6_X6yaw';
+			mapboxgl.accessToken = 'pk.eyJ1IjoiY2xhaXJlLWNnIiwiYSI6ImNrbnA3bjZxdTAwOHQyb3FwdXhhbDM5d3cifQ.cX3_pLwyHaV0y3N6_X6yaw';
 
 			var map = new mapboxgl.Map({
 				container: 'map',
@@ -59,7 +59,7 @@
 		        attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 				});
 
-			map.addLayer(mapboxTiles);
+			//map.addLayer(mapboxTiles);
 
 			var geojsonMarkerOptions = {
 				radius: 3,
