--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-	<link rel="stylesheet"
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
+
+	<!--<link rel="stylesheet"
 	href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>
+	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>-->
 
 	<!--<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' /> -->
 
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
-	<link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
 
 	<style>
 
@@ -39,7 +40,7 @@
 
 	<body>
 
-		<div id='map' style='width:100%; height:100%;'></div>
+		<div id='map'></div>
 
 		<script>
 
@@ -51,13 +52,52 @@
 			mapboxgl.accessToken = 'pk.eyJ1IjoiY2xhaXJlLWNnIiwiYSI6ImNrbnA3bjZxdTAwOHQyb3FwdXhhbDM5d3cifQ.cX3_pLwyHaV0y3N6_X6yaw';
 
 			var map = new mapboxgl.Map({
-				container: 'map',
-				style:'mapbox://styles/claire-cg/cknrt5unw11gm17qurgkky7z8',
-				center:[42.35, -71.15229363080779],
-				zoom: 11,
-				maxZoom: 22,
-		        attribution: '© <a href="https://www.mapbox.com/feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-				});
+			container: 'map',
+			style: 'mapbox://styles/claire-cg/cknrt5unw11gm17qurgkky7z8',
+			center: [-71.15229363080779, 42.35],
+			zoom: 11
+			});
+
+			var geojsonMarkerOptions = {
+				radius: 3,
+				fillColor: "purple",
+				//color: "blue",
+				weight: 1,
+				opacity: 0.8,
+				fillOpacity: 0.8,
+			};
+
+			//var geojsonLine = {weight:2,color: "purple",opacity:0.8,}
+
+			$.getJSON("data/busRoutes.geojson",function(data){
+				L.geoJson(data, {
+					onEachFeature: function(feature,layer){
+						layer.bindPopup(feature.properties.MBTA_ROUTE),
+					{color: "purple", weight: 2};
+					}
+				}).addTo(map);
+			});
+
+			$.getJSON("data/busStops.geojson",function(data){	
+				L.geoJson(data, {
+					pointToLayer: function(feature,latlng){
+						return L.circleMarker(latlng, geojsonMarkerOptions);
+					}
+				}).addTo(map);
+			});
+
+			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
+				L.geoJson(data,{color:"purple", weight:1, fillOpacity:0}).addTo(map);
+			});
+
+		</script>
+
+	</body>
+
+</html>
+
+});
+
 
 			//map.addLayer(mapboxTiles);
 
