--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
 	<link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
 
-	<!--<link rel="stylesheet"
+	<link rel="stylesheet"
 	href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>-->
+	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>
 
 	<!--<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' /> -->
