--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
 	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>
 
-	<!--<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
-    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' /> -->
+	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
 
 
 	<style>
