--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
 				L.geoJson(data,{color:"purple", weight:1, fillOpacity:0}).addTo(map);
 			});
+			
+			$.getJSON("data/highways.geojson",function(data){
+				L.geoJson(data,{color:"red", weight:1, opacity: 0.5, fillOpacity:0}).addTo(map);
+			});
 
 		</script>
 
