--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 			//var map = new mapboxgl.Map({container: 'map',style: 'mapbox://styles/claire-cg/cknrt5unw11gm17qurgkky7z8',center: [-71.15229363080779, 42.35],zoom: 10});
 
 			var geojsonMarkerOptions = {
-				radius: 3,
+				radius: 2,
 				fillColor: "purple",
 				color: "purple",
 				weight: 1,
-				opacity: 0.8,
+				opacity: 0,
 				fillOpacity: 0.8,
 			};
 
@@ -86,7 +86,7 @@
 			});
 
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
-				L.geoJson(data,{color:"purple", weight:1, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"black", weight:1, fillOpacity:0}).addTo(map);
 			});
 			
 			$.getJSON("data/highways.geojson",function(data){
