--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				L.geoJson(data, {
 					onEachFeature: function(feature,layer){
 						layer.bindPopup(feature.properties.MBTA_ROUTE),
-					{color: "purple", weight: 2};
+					{color: "purple", weight: 1, opacity: 0.8};
 					}
 				}).addTo(map);
 			});
