--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 			var geojsonMarkerOptions = {
 				radius: 2,
-				fillColor: #C4DDEE,
-				color: #C4DDEE,
+				fillColor: "#C4DDEE",
+				color: "#C4DDEE",
 				weight: 1,
 				opacity: 0,
 				fillOpacity: 0.8,
@@ -72,7 +72,7 @@
 				L.geoJson(data, {
 					onEachFeature: function(feature,layer){
 						layer.bindPopup(feature.properties.MBTA_ROUTE),
-					{color: #C4DDEE, weight: 1, opacity: 0.8};
+					{color: "#C4DDEE", weight: 1, opacity: 0.8};
 					}
 				}).addTo(map);
 			});
@@ -90,7 +90,7 @@
 			});
 			
 			$.getJSON("data/highways.geojson",function(data){
-				L.geoJson(data,{color:#DDAD7F, weight:1, opacity: 0.5, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 0.5, fillOpacity:0}).addTo(map);
 			});
 
 		</script>
