--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				L.geoJson(data, {
 					onEachFeature: function(feature,layer){
 						layer.bindPopup(feature.properties.popupContent.MBTA_ROUTE),
-					{color: "#C4DDEE", weight: 2};
+					{color: "#C4DDEE", opacity: 0.5, weight: 2};
 					}
 				}).addTo(map);
 			});
