--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+ 	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
+
 	<link rel="stylesheet"
 	href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
 	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>
@@ -67,6 +70,12 @@
 				opacity: 0.8,
 				fillOpacity: 0.8,
 			};
+
+			$.get('./data.csv', function(csvString) {
+
+    // Use PapaParse to convert string to array of objects
+    var data = Papa.parse(csvString, {header: true, dynamicTyping: true}).data;
+
 
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
