--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 			});
 
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
-				L.geoJson(data,{color:"black", weight:1, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"black", weight:1, opacity: 0.6, fillOpacity:0}).addTo(map);
 			});
 
 			$.getJSON("data/highways.geojson",function(data){
-				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 0.7, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 0.9, fillOpacity:0}).addTo(map);
 			});
 
 		</script>
