--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
 			height:100%;
 		}
 	
+		#title h1{
+		font-size: 3em;
+                font-family: 'Ubuntu', serif;
+                font-weight: bold;
+                color: #696969;
+                letter-spacing: .08em;
+                position: fixed;
+                margin-top: 0;
+                top: 20px;
+                left: 55px;
+                padding: 15px 15px;
+                background-color: rgba(255, 255, 255, 0.8);
+                border: 1px hidden;
+                border-radius: 3px;
+                z-index: 800;
+		}
 	</style>
 
 </head>
@@ -42,6 +58,10 @@
 	<body>
 
 		<div id='map'></div>
+		
+		<h1 id= 'title'>
+			Boston Transportation Map
+		</h1>
 
 		<script>
 
