--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
  	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
 
 	<link rel="stylesheet"
@@ -24,11 +25,17 @@
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
 	<link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
-	
-	<link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu|" rel="stylesheet">
 
 	<style>
-	
+
+		#map {
+			position: absolute;
+			top: 0;
+			bottom:0;
+			width:100%;
+			height:100%;
+		}
+
 		#title h1{
 			font-size: 3em;
 			font-family: 'Ubuntu', serif;
@@ -54,15 +61,7 @@
 			left: 20px;
 			width: 50px;
 		}
-		
-		#map {
-			position: absolute;
-			top: 0;
-			bottom:0;
-			width:100%;
-			height:100%;
-		}
-		
+	
 	</style>
 
 </head>
@@ -70,7 +69,7 @@
 	<body>
 
 		<div id='map'></div>
-		
+
 		<h1 id= 'title'>
 			Boston Transportation Map
 		</h1>
@@ -124,12 +123,17 @@
 			});
 
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
-				L.geoJson(data,{color:"black", weight:1, opacity: 0.5, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"black", weight:1, fillOpacity:0}).addTo(map);
 			});
 
 			$.getJSON("data/highways.geojson",function(data){
-				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 1, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 0.7, fillOpacity:0}).addTo(map);
 			});
+
+			$.get('.data/data.csv', function(csvString) {
+
+		    // Use PapaParse to convert string to array of objects
+		    var data = Papa.parse(csvString, {header: true, dynamicTyping: true}).data;
 
 		</script>
 
