--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
- 	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
-
 	<link rel="stylesheet"
 	href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
 	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>
@@ -123,17 +120,12 @@
 			});
 
 			$.getJSON("data/Highway_Sub_Districts.geojson",function(data){
-				L.geoJson(data,{color:"black", weight:1, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"black", weight:1, opacity: 0.4, fillOpacity:0}).addTo(map);
 			});
 
 			$.getJSON("data/highways.geojson",function(data){
-				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 0.7, fillOpacity:0}).addTo(map);
+				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 0.9, fillOpacity:0}).addTo(map);
 			});
-
-			$.get('.data/data.csv', function(csvString) {
-
-		    // Use PapaParse to convert string to array of objects
-		    var data = Papa.parse(csvString, {header: true, dynamicTyping: true}).data;
 
 		</script>
 
