--- a/index.html
+++ b/index.html
@@ -98,11 +98,8 @@
 			};
 
 			$.getJSON("data/busRoutes.geojson",function(data){
-				L.geoJson(data, {
-					onEachFeature: function(feature,layer){
-						layer.bindPopup(feature.properties.MBTA_ROUTE),
+				L.geoJson(data,
 					{color: "#C4DDEE", opacity: 0.5, weight: 2};
-					}
 				}).addTo(map);
 			});
 
