--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
 					onEachFeature: function(feature,layer){
-						layer.bindPopup(feature.properties.MBTA_ROUTE),
+						layer.bindPopup(feature.properties.MBTA_ROUTE);
 					{color: "#C4DDEE", opacity: 0.5, weight: 2};
 					}
 				}).addTo(map);
