--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
 					onEachFeature: function(feature,layer){
-						layer.bindPopup(feature.properties.MBTA_ROUTE);
+						layer.bindPopup(feature.properties.MBTA_ROUTE),
 					{color: "#C4DDEE", opacity: 0.5, weight: 2};
 					}
 				}).addTo(map);
@@ -118,24 +118,31 @@
 				L.geoJson(data,{color:"#DDAD7F", weight:1, opacity: 0.9, fillOpacity:0}).addTo(map);
 			});
 
+			var bosPnt = L.marker ([42.3601,-71.0589]).addTo(map);
+			var camPnt = L.marker ([42.3736,-71.1097]).addTo(map);
+			var lynnPnt = L.marker ([42.4668,-70.9495]).addTo(map);
+			var newtPnt = L.marker ([42.337,-71.2092]).addTo(map);			
+			var qncPnt = L.marker ([42.2529,-71.0023]).addTo(map);
+			var somPnt = L.marker ([42.3876,-71.0995]).addTo(map);
+
 			  $.get('./data.csv', function(csvString) {
 
-    // Use PapaParse to convert string to array of objects
-    var data = Papa.parse(csvString, {header: true, dynamicTyping: true}).data;
+		    // Use PapaParse to convert string to array of objects
+		    var data = Papa.parse(csvString, {header: true, dynamicTyping: true}).data;
 
-    // For each row in data, create a marker and add it to the map
-    // For each row, columns `Latitude`, `Longitude`, and `Title` are required
-    for (var i in data) {
-      var row = data[i];
+		    // For each row in data, create a marker and add it to the map
+		    // For each row, columns `Latitude`, `Longitude`, and `Title` are required
+		    for (var i in data) {
+		      var row = data[i];
 
-      var marker = L.marker([row.Latitude, row.Longitude], {
-        opacity: 1
-      }).bindPopup(row.tot_workers_over16);
-      
-      marker.addTo(map);
-    }
+		      var marker = L.marker([row.Latitude, row.Longitude], {
+		        opacity: 1
+		      }).bindPopup(row.tot_workers_over16);
+		      
+		      marker.addTo(map);
+		    }
 
-  });
+		  });
 
 		</script>
 
