--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>
 
 	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
-    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+    	<link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+	
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
 
 	<style>
 
