--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta charset="utf-8">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	
+
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
 
@@ -21,7 +21,7 @@
 	<script src ="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"> </script>
 
 	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
-    	<link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
 
 	<style>
 
@@ -91,6 +91,14 @@
 
 			map.addLayer(mapboxTiles);
 
+			L.mapbox.accessToken = 'pk.eyJ1IjoiY2xhaXJlLWNnIiwiYSI6ImNrbnA3bjZxdTAwOHQyb3FwdXhhbDM5d3cifQ.cX3_pLwyHaV0y3N6_X6yaw';
+
+			var mapboxTiles = L.tileLayer('mapbox://styles/claire-cg/cko6ja389164d19rtsfc704wy' + L.mapbox.accessToken, {
+				maxZoom: 22,
+				});
+
+			map.addLayer(mapboxTiles);
+
 			var geojsonMarkerOptions = {
 				radius: 3,
 				fillColor: "#C4DDEE",
@@ -143,7 +151,12 @@
 
 		  });
 
-
+			var bosPnt = L.marker ([42.3601,-71.0589]).addTo(map);
+			var camPnt = L.marker ([42.3736,-71.1097]).addTo(map);
+			var lynnPnt = L.marker ([42.4668,-70.9495]).addTo(map);
+			var newtPnt = L.marker ([42.337,-71.2092]).addTo(map);			
+			var qncPnt = L.marker ([42.2529,-71.0023]).addTo(map);
+			var somPnt = L.marker ([42.3876,-71.0995]).addTo(map);
 
 		</script>
 
