--- a/index.html
+++ b/index.html
@@ -91,14 +91,6 @@
 
 			map.addLayer(mapboxTiles);
 
-			L.mapbox.accessToken = 'pk.eyJ1IjoiY2xhaXJlLWNnIiwiYSI6ImNrbnA3bjZxdTAwOHQyb3FwdXhhbDM5d3cifQ.cX3_pLwyHaV0y3N6_X6yaw';
-
-			var mapboxTiles = L.tileLayer('mapbox://styles/claire-cg/cko6ja389164d19rtsfc704wy' + L.mapbox.accessToken, {
-				maxZoom: 22,
-				});
-
-			map.addLayer(mapboxTiles);
-
 			var geojsonMarkerOptions = {
 				radius: 3,
 				fillColor: "#C4DDEE",
@@ -107,6 +99,33 @@
 				opacity: 0.8,
 				fillOpacity: 0.8,
 			};
+
+			var tractColor ={
+
+			}
+
+			$.getJSON("data/tract_data.geojson", function(data){
+				L.geoJson(data, {
+					onEachFeature: function getColor(d) {
+					    return d < 1000 ? '#FFFFFF' :
+					           d > 2000  ? '#f7f7f7' :
+					           d > 4000  ? '#d9d9d9' :
+					           d > 6000  ? '#bdbdbd' :
+					           d > 8000   ? '#969696' :
+					           d > 9000   ? '#636363' ;
+					}
+					onEachFeature: function style(feature) {
+					    return {
+					        fillColor: getColor(feature.properties.geoidDP05_),
+					        weight: 2,
+					        opacity: 0.7,
+					        color: 'white',
+					        dashArray: '3',
+					        fillOpacity: 0.7
+					    };
+					}
+				}).addTo(map);
+			});
 
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
