--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		}
 		
 		#author h2{
-			font-size: 1em;
+			font-size: 7px;
 			font-family: "Lora", sans-serif;
 			position: fixed;
 			bottom: 20px;
@@ -104,32 +104,7 @@
 				fillOpacity: 0.8,
 			};
 
-			var tractColor ={
-
-			}
-
-			$.getJSON("data/tract_data.geojson", function(data){
-				L.geoJson(data, {
-					onEachFeature: function getColor(d) {
-					    return d < 1000 ? '#FFFFFF' :
-					           d > 2000  ? '#f7f7f7' :
-					           d > 4000  ? '#d9d9d9' :
-					           d > 6000  ? '#bdbdbd' :
-					           d > 8000   ? '#969696' :
-					           d > 9000   ? '#636363' ;
-					}
-					onEachFeature: function style(feature) {
-					    return {
-					        fillColor: getColor(feature.properties.geoidDP05_),
-					        weight: 2,
-					        opacity: 0.7,
-					        color: 'white',
-					        dashArray: '3',
-					        fillOpacity: 0.7
-					    };
-					}
-				}).addTo(map);
-			});
+			
 
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
