--- a/index.html
+++ b/index.html
@@ -28,16 +28,7 @@
 
 	<style>
 
-		#map {
-			position: absolute;
-			top: 50px;
-			bottom: 0;
-			left: 50px;
-			width:100%;
-			height:100%;
-		}
-
-		#title h1{
+				#title h1{
 			font-size: 3em;
 			font-family: 'Ubuntu', serif;
 			font-weight: bold;
@@ -55,13 +46,23 @@
 		}
 		
 		#author h2{
-			font-size: 7px;
+			font-size: 1em;
 			font-family: "Lora", sans-serif;
 			position: fixed;
 			bottom: 20px;
 			left: 20px;
 			width: 50px;
+			color: #696969;
 		}
+
+		#map {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			width:100%;
+			height:100%;
+		}
+	
 	
 	</style>
 
