--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<style>
 
-				#title h1{
+		#title {
 			font-size: 3em;
 			font-family: 'Ubuntu', serif;
 			font-weight: bold;
@@ -45,14 +45,18 @@
 			z-index: 800;
 		}
 		
-		#author h2{
-			font-size: 1em;
+		#author {
+			font-size: .5em;
 			font-family: "Lora", sans-serif;
 			position: fixed;
 			bottom: 20px;
 			left: 20px;
 			width: 50px;
 			color: #696969;
+			background-color: rgba(255, 255, 255, 0.8);
+            border: 1px hidden;
+            border-radius: 3px;
+            z-index: 800;
 		}
 
 		#map {
@@ -62,7 +66,6 @@
 			width:100%;
 			height:100%;
 		}
-	
 	
 	</style>
 
@@ -105,7 +108,32 @@
 				fillOpacity: 0.8,
 			};
 
-			
+			var tractColor ={
+
+			}
+
+			$.getJSON("data/tract_data.geojson", function(data){
+				L.geoJson(data, {
+					onEachFeature: function getColor(d) {
+					    return d < 1000 ? '#FFFFFF' :
+					           d > 2000  ? '#f7f7f7' :
+					           d > 4000  ? '#d9d9d9' :
+					           d > 6000  ? '#bdbdbd' :
+					           d > 8000   ? '#969696' :
+					           d > 9000   ? '#636363' ;
+					}
+					onEachFeature: function style(feature) {
+					    return {
+					        fillColor: getColor(feature.properties.geoidDP05_),
+					        weight: 2,
+					        opacity: 0.7,
+					        color: 'white',
+					        dashArray: '3',
+					        fillOpacity: 0.7
+					    };
+					}
+				}).addTo(map);
+			});
 
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
