--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   	<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
 
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-   crossorigin=""/>
-   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-   crossorigin=""></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
+   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
 	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
 
 	<style>
 
+		#map {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			width:100%;
+			height:100%;
+		}
 		#title {
 			font-size: 3em;
 			font-family: 'Ubuntu', serif;
@@ -57,14 +60,6 @@
             border: 1px hidden;
             border-radius: 3px;
             z-index: 800;
-		}
-
-		#map {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			width:100%;
-			height:100%;
 		}
 	
 	</style>
@@ -108,32 +103,7 @@
 				fillOpacity: 0.8,
 			};
 
-			var tractColor ={
-
-			}
-
-			$.getJSON("data/tract_data.geojson", function(data){
-				L.geoJson(data, {
-					onEachFeature: function getColor(d) {
-					    return d < 1000 ? '#FFFFFF' :
-					           d > 2000  ? '#f7f7f7' :
-					           d > 4000  ? '#d9d9d9' :
-					           d > 6000  ? '#bdbdbd' :
-					           d > 8000   ? '#969696' :
-					           d > 9000   ? '#636363' ;
-					}
-					onEachFeature: function style(feature) {
-					    return {
-					        fillColor: getColor(feature.properties.geoidDP05_),
-					        weight: 2,
-					        opacity: 0.7,
-					        color: 'white',
-					        dashArray: '3',
-					        fillOpacity: 0.7
-					    };
-					}
-				}).addTo(map);
-			});
+			$.getJSON("data/tract_data.geojson", function(data)).addTo(map);
 
 			$.getJSON("data/busRoutes.geojson",function(data){
 				L.geoJson(data, {
@@ -157,7 +127,7 @@
 			});
 
 
-			 $.get('./data.csv', function(csvString) {
+			 $.get('data/data.csv', function(csvString) {
 
 		    var data = Papa.parse(csvString, {header: true, dynamicTyping: true}).data;
 
