--- a/index.html
+++ b/index.html
@@ -110,14 +110,18 @@
 				zoom: 9 
 			});
 
-			$.getJSON("data/busRoutes.geojson",function(data){
-				L.geoJson(data, {
-					onEachFeature: function(feature,layer){
-						layer.bindPopup(feature.properties.MBTA_ROUTE),
-					{color: "#C4DDEE", opacity: 0.5, weight: 2};
-					}
-				}).addTo(map);
-			});
+			map.on('click', function(e) {
+		      var features = map.queryRenderedFeatures(e.point, {
+		        layers: ['busroutes']
+		      });
+		      if (!features.length) {return;
+		     }
+		      var feature = features[0];
+		      var popup = new mapboxgl.Popup({ offset: [0, -15] }).setLngLat(feature.properties.MBTA_ROUTE)
+		        .setHTML('<h4>' + feature.properties.MBTA_ROUTE + '</h4>')
+		        .addTo(map);
+		    });
+
 
 			function load() {
 			$.ajax({
