--- a/index.html
+++ b/index.html
@@ -119,7 +119,25 @@
 				}).addTo(map);
 				});
 			
+			$.get('data/data.csv', function(csvString) {
 
+		    var data = Papa.parse(csvString, {header: true, dynamicTyping: true}).data;
+
+		    for (var i in data) {
+		      var row = data[i];
+
+		      var popupContent="<p>"+row.city+"<p>"+"Total workers:"+row.tot_workers_over16+"<p>"+"Workers who drove alone in a car, truck, or van:"+row.alone_car_truck_van+"<p>"+"Workers who carpooled:"+row.carpool_car_truck_van+"<p>"+"Workers who used public transit:"+row.pub_trans+"<p>";
+
+		      var marker = L.marker([row.latitude, row.longitude], {
+		        opacity: 0.8,
+		        icon: L.icon({
+		        	iconUrl: 'image/car.png',
+		        	iconSize: [40,40]})
+		      }).bindPopup(popupContent);
+		      
+		      marker.addTo(map);
+		    }
+		  });
 			
 
 		</script>
